--- a/app_data/templates/twitter.jinja2
+++ b/app_data/templates/twitter.jinja2
@@ -4,7 +4,7 @@
 {% block content %}
 
     <div class="form-wrapper">
-      <h2 class="title">Contact</h2>
+      <h2 class="title">Twitter search</h2>
 
       <form method="POST" action="{{ url_for('twitter') }}">
 
